// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawerGroup drawer group with isExpanded applied  1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-notification-drawer__group pf-m-expanded"
  >
    <h1>
      <button
        aria-expanded="true"
        class="pf-v6-c-notification-drawer__group-toggle"
      >
        <div
          class="pf-v6-c-notification-drawer__group-toggle-title"
        >
          Critical Alerts
        </div>
        <div
          class="pf-v6-c-notification-drawer__group-toggle-count"
        >
          <span
            class="pf-v6-c-badge pf-m-unread"
          >
            2
          </span>
        </div>
        <span
          class="pf-v6-c-notification-drawer__group-toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </h1>
  </section>
</DocumentFragment>
`;

exports[`NotificationDrawerGroup drawer group with isRead applied  1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-notification-drawer__group"
  >
    <h1>
      <button
        aria-expanded="false"
        class="pf-v6-c-notification-drawer__group-toggle"
      >
        <div
          class="pf-v6-c-notification-drawer__group-toggle-title"
        >
          Critical Alerts
        </div>
        <div
          class="pf-v6-c-notification-drawer__group-toggle-count"
        >
          <span
            class="pf-v6-c-badge pf-m-read"
          >
            2
          </span>
        </div>
        <span
          class="pf-v6-c-notification-drawer__group-toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </h1>
  </section>
</DocumentFragment>
`;

exports[`NotificationDrawerGroup renders correct heading level 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-notification-drawer__group"
  >
    <h2>
      <button
        aria-expanded="false"
        class="pf-v6-c-notification-drawer__group-toggle"
      >
        <div
          class="pf-v6-c-notification-drawer__group-toggle-title"
        >
          Critical Alerts
        </div>
        <div
          class="pf-v6-c-notification-drawer__group-toggle-count"
        >
          <span
            class="pf-v6-c-badge pf-m-unread"
          >
            2
          </span>
        </div>
        <span
          class="pf-v6-c-notification-drawer__group-toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </h2>
  </section>
</DocumentFragment>
`;

exports[`NotificationDrawerGroup renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-c-notification-drawer__group"
  >
    <h1>
      <button
        aria-expanded="false"
        class="pf-v6-c-notification-drawer__group-toggle"
      >
        <div
          class="pf-v6-c-notification-drawer__group-toggle-title"
        >
          Critical Alerts
        </div>
        <div
          class="pf-v6-c-notification-drawer__group-toggle-count"
        >
          <span
            class="pf-v6-c-badge pf-m-unread"
          >
            2
          </span>
        </div>
        <span
          class="pf-v6-c-notification-drawer__group-toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </h1>
  </section>
</DocumentFragment>
`;
